# ed2-trab

./: README.md
dcc012b-trab1-team100palavras-main/: CMakeCache.txt  CMakeLists.txt  README.md  REPORT.md
dcc012b-trab1-team100palavras-main/input/: cinco_minutos.txt  dom_casmurro.txt  iracema.txt  memorias_postumas.txt  no_paiz_dos_yankees.txt  o_primo_bazilio.txt  orpheus.txt  os_jesuistas_e_o_ensino.txt  os_lusiadas.txt  receita_de_bolo.txt  triste_fim_polycarpo_quaresma.txt
dcc012b-trab1-team100palavras-main/output/: nome_arquivos.txt  output0.txt  output1.txt  output10.txt  output1000.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt  output8.txt  output9.txt
dcc012b-trab1-team100palavras-main/sempalavras/: config.h.in
dcc012b-trab1-team100palavras-main/sempalavras/include/: config.h  hash.h  manager.h  metrics.h  node.h  sort.h
dcc012b-trab1-team100palavras-main/sempalavras/src/: hash.cpp  list.cpp  manager.cpp  metrics.cc
dcc012b-trab1-team100palavras-main/tests/: CMakeLists.txt  test1.cc  test1000.cc  test2.cc  test4.cc  test5.cc  test6.cc
dcc012b-trab2-team-100-palavras-main/: .gitignore  CMakeLists.txt  README.md  REPORT.md
dcc012b-trab2-team-100-palavras-main/input/: cinco_minutos.txt  dom_casmurro.txt  iracema.txt  memorias_postumas.txt  no_paiz_dos_yankees.txt  o_primo_bazilio.txt  orpheus.txt  os_jesuistas_e_o_ensino.txt  os_lusiadas.txt  receita_de_bolo.txt  triste_fim_polycarpo_quaresma.txt
dcc012b-trab2-team-100-palavras-main/output/: 0_compressed.txt  10_compressed.txt  1_compressed.txt  2_compressed.txt  3_compressed.txt  4_compressed.txt  5_compressed.txt  6_compressed.txt  7_compressed.txt  8_compressed.txt  9_compressed.txt  ignore.csv  nome_arquivos.txt  remissivo1.txt  remissivo10.txt  remissivo1001.txt  remissivo11.txt  remissivo2.txt  remissivo3.txt  remissivo4.txt  remissivo5.txt  remissivo6.txt  remissivo7.txt  remissivo8.txt  remissivo9.txt
dcc012b-trab2-team-100-palavras-main/sempalavras/: CMakeLists.txt
dcc012b-trab2-team-100-palavras-main/sempalavras/include/: config.h  hash.h  huffman.h  list.h  manager.h  node.h  sort.h  trie.h  trienode.h
dcc012b-trab2-team-100-palavras-main/sempalavras/src/: hash.cpp  huffman.cpp  manager.cpp  metrics.cc  trie.cpp
dcc012b-trab2-team-100-palavras-main/tests/: CMakeLists.txt  test1.cc  test10.cc  test1000.cc  test11.cc  test12.cc  test3.cc  test7.cc  test8.cc  test9.cc
